--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ button {
     border: none;
     cursor: pointer;
     outline: none;
-    width: 100%;
+    width: 100%
 }
 
 button:focus {
@@ -101,24 +101,27 @@ header{
 }
 
 .instagrid-icon img{
-  max-width: 300px;
-  height: 30vh;
+  width: 320px;
+  height: 90vh;
   align-items: center;
   position: relative;
 }
 
 .search-box {
-  padding-top: 7rem;
+  padding-top: 26rem;
   padding-left: 1rem;
+
 }
 
 input, textarea {
 	background-color: rgba(0,0,0,0.1);
 	color: white;
 	font-size: 1.6rem;
+	position: relative;
   border: none;
-  width: 80%; 
-  padding-bottom: 12rem
+  width: 80%;
+  padding-top: 1.2rem;
+
 }
 
 #hashtag-search{
@@ -143,14 +146,8 @@ section.search{
 }
 
 .grid{
-  display: flex;
-  justify-content: space-between; /*drawing in the middle*/
-  flex-direction: column;
      display: -webkit-flex;
-   -webkit-align-items: center;
-   align-items: center;
-   -webkit-justify-content: center;
-   justify-content: center;
+   display: flex;
    /* You can set flex-wrap and flex-direction individually */
    -webkit-flex-direction: row;
    flex-direction: row;
@@ -163,15 +160,16 @@ section.search{
    /* valid values are: flex-start, flex-end, space-between, space-around, stretch */
    -webkit-align-content: flex-end;
    align-content: flex-end;
-
 }
 
 .profile-wrapper{ 
   position: relative;
+  flex-direction: column;
+
 }
 /*wraps the profile image*/
 .profile-picture {
-  width: 40%;
+  width: 50%;
 }
 
 .profile-picture img{
@@ -182,15 +180,13 @@ section.search{
 }
 
 .profile-data{
-  display: flex;  
   font-weight: bold;
   top: 0;
-  width: 30%;
-  padding-right: 2rem;
-  align-items: flex-start;
-  flex: 0 0 100%;
+  width: 100%;
   justify-content: flex-end;
   flex-direction: column;
+   -webkit-flex: 3 0 0; 
+   flex: 3 0 0; 
 }
 
 .transparent{
@@ -208,6 +204,8 @@ p {
   color: white;
   font-weight: bold;
   font-size: 1rem;
+    padding-left: 6rem;
+
 }
 
 textarea:focus, input:focus{
